# conf

./: .gitignore  LICENSE  README.md  aliases
gptcli/: pyproject.toml
gptcli/src/: conf.py  job.json  maczsh.json  main.py  none.json
